favorites functionality fixes. Use the favoritesPath api. fix the ellipsis truncation in faceting. align favorites icon inline with text in faceting.

--- a/common/styles/scss/_recordset.scss
+++ b/common/styles/scss/_recordset.scss
@@ -536,6 +536,10 @@ faceting {
     .chaise-checkbox {
         margin-bottom: 7px;
         margin-left: 5px;
+
+        // puts the checkbox+label to the left and the favorite icon to the right
+        display: flex;
+        justify-content: space-between;
     }
 
     li:hover {
