--- a/common/styles/scss/app.scss
+++ b/common/styles/scss/app.scss
@@ -575,8 +575,8 @@ html {
         position: relative;
 
         label {
-            display: inline-block;
-            margin-left: 25px;
+            padding-left: 25px;
+            padding-right: 5px;
             font-weight: 400;
             position: relative;
             vertical-align: middle;
@@ -636,7 +636,7 @@ html {
     // favorite icon used for favorites in faceting->choice-picker->list and ellipsis action column
     .favorite-icon {
         top: 2px;
-        margin-right: 10px;
+        margin-right: 8px;
         cursor: pointer;
         font-size: 18px;
 
